# cross-terms-matter

./: .gitignore  README.md
doc/: alias.typ  cite-with-locator.csl  main.typ  ref.bib  slide-fragment.typ  template.typ
matlab/: WignerNoCrossterms.m  ch3_page_20.m  diverging_imagesc.m  no_cross_terms_rewrite.m
py/: draw_cross_intensity.py  g.py  pyproject.toml  weird.py
