[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "marimo>=0.9.30",
    "polars>=1.17.1",
    "pywigner",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
pywigner = { git = "https://github.com/ljbkusters/python-wigner-distribution" }
